--- a/src/app/layouts/navbar-user/navbar-user.component.html
+++ b/src/app/layouts/navbar-user/navbar-user.component.html
@@ -31,8 +31,8 @@
         <li *ngIf="loggedIn" class="dropdown"><a routerLink="/user-course-manager"><span>Hồ sơ cá nhân</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a routerLink="/user-course-manager">Khóa học của bạn</a></li>
-            <li><a routerLink="/young-schedule">Tài liệu học tập</a></li>
-            <li><a routerLink="/ielts-schedule">Thanh toán</a></li>
+            <li><a routerLink="/document-user">Tài liệu học tập</a></li>
+            <!-- <li><a routerLink="/ielts-schedule">Thanh toán</a></li> -->
           </ul>
         </li>
         <li><a routerLink="/contact">Liên hệ</a></li>
