--- a/src/app/layouts/navbar-user/navbar-user.component.html
+++ b/src/app/layouts/navbar-user/navbar-user.component.html
@@ -35,6 +35,7 @@
             <!-- <li><a routerLink="/ielts-schedule">Thanh toán</a></li> -->
           </ul>
         </li>
+        <li><a  routerLink="/quiz-app">Thi thử</a></li>
         <li><a routerLink="/contact">Liên hệ</a></li>
         <li><a *ngIf="!loggedIn" routerLink="/login-user">Đăng nhập</a></li>
         <li><a *ngIf="loggedIn" (click)="handleLogout()">Đăng xuất</a></li>
