--- a/src/app/page_users/quiz-app/quiz-app.component.html
+++ b/src/app/page_users/quiz-app/quiz-app.component.html
@@ -29,6 +29,7 @@
             class="formbold-form-input"
           />
         </div>-->
+        <!-- <p>Thời gian còn lại: {{ countdown }} giây</p> -->
       </div>
     <div *ngFor="let quiz of quizs">
       <div class="formbold-mb-5">
