--- a/src/app/layouts/navbar-user/navbar-user.component.html
+++ b/src/app/layouts/navbar-user/navbar-user.component.html
@@ -32,7 +32,8 @@
           <ul>
             <li><a routerLink="/user-course-manager">Khóa học của bạn</a></li>
             <li><a routerLink="/document-user">Tài liệu học tập</a></li>
-            <!-- <li><a routerLink="/ielts-schedule">Thanh toán</a></li> -->
+            <li><a routerLink="/exam-user">Kiểm tra học tập</a></li>
+            <li><a routerLink="/exam-student-result">Kết quả học tập</a></li>
           </ul>
         </li>
         <li><a  routerLink="/quiz-app">Thi thử</a></li>
