--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -55,6 +55,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                      <a class="nav-link" routerLink="/exam-course">
+                           <span class="las la-file-alt"></span>
+                           <small>Bài kiểm tra</small>
+                       </a>
+                   </li>
+                    <li class="nav-item">
                       <a class="nav-link" routerLink="/study-register">
                            <span class="las la-file-invoice"></span>
                            <small>Quản lý thu chi</small>
