--- a/src/app/pages/add-basic-english/add-basic-english.component.html
+++ b/src/app/pages/add-basic-english/add-basic-english.component.html
@@ -65,7 +65,9 @@
                               <td><span>Thời lượng khóa</span></td>
                                   <td>
                                     <select [(ngModel)]="courses.time" name="time" id="time" required>
-                                      <option value="12 tuần">12 tuần</option>
+                                      <option value="36">36 buổi</option>
+                                      <option value="48">48 buổi</option>
+                                      <option value="60">60 buổi</option>
                                     </select>
                                   </td>
                               </div>
