--- a/src/app/pages/add-teacher/add-teacher.component.html
+++ b/src/app/pages/add-teacher/add-teacher.component.html
@@ -20,9 +20,8 @@
                                     <td>
                                       <input type="text" [(ngModel)]="teacher.fullName" name="fullName" id="fullName" >
                                     </td>
-                                  <td><span>Ảnh</span></td>
-                                  <td><input type="text" [(ngModel)]="teacher.image" name="image" id="image" >
-                                  </td>
+                                  <td><span>Mức lương</span></td>
+                                  <td><input type="text" [(ngModel)]="teacher.levelSalary" name="levelSalary" id="levelSalary" ></td>
                                   <td><span>Sinh nhật</span></td>
                                   <td>
                                     <input type="text" [(ngModel)]="teacher.birthDay" name="birthDay" id="birthDay" >
