--- a/src/app/pages/course/course.component.html
+++ b/src/app/pages/course/course.component.html
@@ -103,7 +103,7 @@
                               {{course?.openning}}
                              </td>
                              <td>
-                              {{course?.time}}
+                              {{course?.time}} buổi
                              </td>
                            <td>
                             <div class="actions">
