--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -61,7 +61,7 @@
                        </a>
                    </li>
                     <li class="nav-item">
-                      <a class="nav-link" routerLink="/study-register">
+                      <a class="nav-link" routerLink="/list-timetable-salary">
                            <span class="las la-file-invoice"></span>
                            <small>Quản lý thu chi</small>
                        </a>
