--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -55,7 +55,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" routerLink="/exam-course">
+                      <a class="nav-link" routerLink="/result-study">
                            <span class="las la-file-alt"></span>
                            <small>Bài kiểm tra</small>
                        </a>
@@ -67,7 +67,7 @@
                        </a>
                    </li>
                    <li class="nav-item">
-                    <a class="nav-link" routerLink="/teacher-manager">
+                    <a class="nav-link" routerLink="/report">
                          <span class="las la-clipboard-list"></span>
                          <small>Báo cáo</small>
                      </a>
